# xwbot

./: CMakeLists.txt  CTestConfig.cmake  ProjectHome.md
apps/: CMakeLists.txt
apps/android/GobeeMeDroid/: AndroidManifest.xml
apps/cv/: CMakeLists.txt  comparator.cpp  comparator.h  eyes.cpp  eyes.h  featuretrack.cpp  featuretrack.h  filter.cpp  filter.h  main.cpp  rootbus.cpp  rootbus.h
apps/gtk/: .cproject  .project  CMakeLists.txt  GobeeGtk.files  GobeeGtk.includes  Makefile  _main_.c  config.h.in  main.c  mynet.h  udp.c  x_queue.c  x_queue.h  x_theora.c  x_theora.h  x_vp8.c  x_vp8.h  x_vpx.c  xw_call_dlg.glade  xw_login.glade  xw_roster.glade  xwrcptex.glade  xx_theora.c
apps/gtk/cmake/modules/: FindOGGTHEORA.cmake  FindOpenSSL.cmake
apps/gtk/libev/: CMakeLists.txt  ev.c  ev.h  ev_select.c
apps/gtk/ui/: treemodel.c  treemodel.h  v4l2_capture.c  x_gl.c  xvirt_cam.c  xvirtdisplay_view.c
apps/ios/GobeeMe/: GobeeMe-Info.plist  GobeeMe-Prefix.pch  Gobee_AppDelegate.h  Gobee_AppDelegate.m  Gobee_GLViewController.h  Gobee_GLViewController.m  YuvShader.fsh  YuvShader.vsh  eagl_common.h  eagl_common.m  gl_common.c  gl_common.h  main.m
apps/ios/GobeeMe.xcodeproj/: project.pbxproj
apps/ios/GobeeMe.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
apps/ios/GobeeMe/gobeemods/: RGB565Shader.fsh
apps/ios/GobeeMeTests/: GobeeMeTests-Info.plist  GobeeMeTests.h  GobeeMeTests.m
apps/qt/GobeeQt/: CMakeLists.txt  GobeeQt.pro  displayframe.cpp  displayframe.h  gobeeapplication.cpp  gobeeapplication.h  gobeebusmodel.cpp  gobeebusmodel.h  gobeegraphicsscene.cpp  gobeegraphicsscene.h  gobeerostermodel.cpp  gobeerostermodel.h  gobeewrap.cpp  gobeewrap.h  main.cpp  mainwindow.cpp  mainwindow.h
apps/qt/GobeeQt/gobee/: gobeedisplay.cpp  gobeedisplay.h  gobeehid.cpp  gobeehid.h  gobeemsg.cpp  gobeemsg.h
apps/qt/GobeeQt/resources/: resources.qrc
apps/qt/GobeeQt/ui/: calldialog.cpp  calldialog.h  calldialog.ui  displayframe.ui  incomingcalldialog.cpp  incomingcalldialog.h  incomingcalldialog.ui  mainwindow.ui  messageform.h  messageform.ui  optionsframe.cpp  optionsframe.h  optionsframe.ui
xmppbot/: .cproject  .project  CMakeLists.txt  Doxyfile  Doxyfile.in  INCLUDES.cmk  INSTALL  __init.h  android_gen.sh  config.h  config.h.in  gobee_init.c  main.c  tst.c  x_api_doc.h  x_bus.c  x_dll.c  x_parser.c
xmppbot/3dparty/: CMakeLists.txt
xmppbot/3dparty/libev/: CMakeLists.txt  config.h  config.h.cmake  config_android.h  config_ios.h  ev.c
xmppbot/3dparty/openssl/win32/: libeay32.lib  ssleay32.lib
xmppbot/3dparty/tarballs/: last_x264.tar.bz2  ludh264.source.tar.bz2  x264-snapshot-20130116-2245-stable.tar.bz2  x264-snapshot-20130116-2245.tar.bz2
xmppbot/cmake/: TARGET.cmake  android.sh  android.toolchain.cmake  gen_init.sh
xmppbot/cmake/modules/: FindSpeex.cmake  FindTheora.cmake
xmppbot/examples/: CMakeLists.txt  Gstreamer.txt
xmppbot/examples/simplevideoserver/: CMakeLists.txt  main.c  mynet.h  udp.c  xwrcptex.glade
xmppbot/include/: h261.h  rtcp.h  rtp.h  x_codec.h  x_core.h  x_jingle.h  x_parser.h  xforms.h  xi.h  xiapi.h  xmppagent.h
xmppbot/include/crypt/: base64.h  crc32.h  md5.h  sha1_rfc3174.h
xmppbot/jni/: CMakeLists.txt  droid_cam_jni.c  droid_cam_plugin.c  droid_common.c  droid_display_plugin.c  droid_gles2_renderer.c  droid_hid_jni.c  mygl.c  oglrndrr.h
xmppbot/plugins/: CMakeLists.txt
xmppbot/plugins/audio/: CMakeLists.txt
xmppbot/plugins/audio/androidspk/: CMakeLists.txt  vspeaker.cpp  vspeaker.h
xmppbot/plugins/audio/codec/: CMakeLists.txt
xmppbot/plugins/audio/vmic/: CMakeLists.txt  alsamic.cpp  alsamic.h  xvmic_plugin.c
xmppbot/plugins/audio/vsiri/: CMakeLists.txt  vsiri.cpp  vsiri.h  vsiri_test.c
xmppbot/plugins/audio/vspkr/: CMakeLists.txt  vspeaker.cpp  vspeaker.h
xmppbot/plugins/auth_md5/: Makefile  auth_md5.c
xmppbot/plugins/auth_plain/: CMakeLists.txt  auth_plain.c
xmppbot/plugins/bind/: CMakeLists.txt  bind.c
xmppbot/plugins/cmd_api/: CMakeLists.txt  cmdapi.cpp  x_cmdapi.h
xmppbot/plugins/core/: CMakeLists.txt  features.c  iq.c  message.c  presence.c  procsys.c  sasl.c  stream.c  tls.c
xmppbot/plugins/crypt/: CMakeLists.txt  base64.c  crc32.c  crypt_mod.c  md5.c  md5main.c  sha1_rfc3174.c
xmppbot/plugins/disco/: CMakeLists.txt  xmlns_disco.c
xmppbot/plugins/dsp/: dft.c  fft.c
xmppbot/plugins/eventdomains/: CMakeLists.txt  evtdomain.c
xmppbot/plugins/ft/: Makefile  filetransfer.c  xmlns_si.c
xmppbot/plugins/ice/: CMakeLists.txt  Makefile  x_ice.c  x_ice.h  x_stun.c  x_stun.h  x_stun_server.c
xmppbot/plugins/iconbit/: ibitcmd.c
xmppbot/plugins/inband_shell/: CMakeLists.txt  Makefile  shell.c  shell_media_profile.c  shell_transp_profile.c
xmppbot/plugins/jingle/: CMakeLists.txt  Makefile  xep_0166.c  xep_0166_ggle.c
xmppbot/plugins/public_api/: CMakeLists.txt  pubapi.c
xmppbot/plugins/rtp/: rtp.c
xmppbot/plugins/sessions_api/: CMakeLists.txt  SessionCtl.cpp  SessionCtl.h  event_domain.c  ice_ctl.c  ice_ctl_ggle.c  payload_ctl.c  roster_pure_api.c  session_api.c  session_tester.c  sessions.c  sessions.h  streams.c
xmppbot/plugins/video/: CMakeLists.txt
xmppbot/plugins/video/camlinux/: CMakeLists.txt  lnxcam_plugin.c
xmppbot/plugins/video/codec/: CMakeLists.txt
xmppbot/plugins/video/fbcam/: CMakeLists.txt  camfb_plugin.c  (+2 more)
xmppbot/plugins/xforms/: xforms.c
xmppbot/plugins/xiapi/: CMakeLists.txt  xiapi.c
xmppbot/tests/: Makefile  b64-test.c  outvector.xml  outvector2.xml  parser_test1.c  sesstest.c  ssltest.c  stun_test.c  test.c  testframework.c  vector.xml  vector2.xml
xmppbot/xilib/: CMakeLists.txt  tester.c  xilib.c  xilib.h
xmppbot/xwlib/: CMakeLists.txt  XConfig_H.cmake  test1.c  x_config.h  x_config.h.in  x_config_android.h  x_config_ios.h  x_lib.c  x_lib.h  x_obj.c  x_obj.h  x_objfactory.c  x_queue.c  x_queue.h  x_ref.c  x_ref.h  x_string.c  x_string.h  x_stuff.c  x_trace_defs.h  x_types.h  x_utils.c  x_utils.h
xmppbot/xwlib++/: .gitignore  CMakeLists.txt  x_objxx.cpp  x_objxx.h  xwxxtest.cpp
xmppbot/xwlib-objc/: CMakeLists.txt  x_objc.h  x_objc.m  xw-objc-test.m
(+73 files in other folders)
