CMAKE_MINIMUM_REQUIRED (VERSION 2.6) 
PROJECT (gobee)

INCLUDE(CheckIncludeFiles)

ADD_SUBDIRECTORY(xmppbot)
IF(LINUX OR APPLE)
ADD_SUBDIRECTORY(apps)
ENDIF(LINUX OR APPLE)

SET(TARGET_VERSION_MAJOR 1)
SET(TARGET_VERSION_MINOR 2)
SET(CPACK_PACKAGE_VERSION "1.0.2")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "2")
SET(CPACK_STRIP_FILES xwclient)
SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "GoBee") 
 
INCLUDE(CPack)
ENABLE_TESTING()
INCLUDE(CTest)
INCLUDE(CTestConfig.cmake)

