IF(LINUX AND NOT WITHOUT_GUI)
#ADD_SUBDIRECTORY( gtk )
ADD_SUBDIRECTORY( qt/GobeeQt )
ENDIF(LINUX AND NOT WITHOUT_GUI)

IF(APPLE AND NOT IOS)
ADD_SUBDIRECTORY( qt/GobeeQt )
ENDIF(APPLE AND NOT IOS)

IF(IOS)
#ADD_SUBDIRECTORY( ios )
ENDIF()

IF(DEFINED CV_LIB)
ADD_SUBDIRECTORY( cv )
ENDIF(DEFINED CV_LIB)
