IF(CMAKE_COMPILER_IS_GNUCC)
SET(DEBUG_CFLAGS "-g -gdwarf-2")
SET(CORE_CFLAGS "-Wall -O2 -I./ ${DEBUG_CFLAGS}")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CORE_CFLAGS} ${DEBUG_CFLAGS}")

INCLUDE_DIRECTORIES( ${include_top_dir} )

ADD_LIBRARY(xw-objc x_objc.m)

IF (UNIX)
TARGET_LINK_LIBRARIES(xw-objc xw )
ENDIF (UNIX)

IF (WIN32)
TARGET_LINK_LIBRARIES(xw-objc xw objc)
ENDIF(WIN32)

IF(ANDROID)
TARGET_LINK_LIBRARIES(xw-objc xw objc log)
ENDIF(ANDROID)

IF(NOT IOS)
ADD_EXECUTABLE (xobjc-test1 xw-objc-test.m) 
TARGET_LINK_LIBRARIES(xobjc-test1 xw-objc)
ADD_DEPENDENCIES( xobjc-test1 xw-objc )
ENDIF(NOT IOS)

FILE(GLOB ifiles "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(FILES ${ifiles} DESTINATION include/xwlib++)
INSTALL(TARGETS xw-objc DESTINATION lib)

INCLUDE(CPack)
ENABLE_TESTING()

